[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Pixel Art Top Down - Basic/Texture/Chests.png" type="Texture" id=1]
[ext_resource path="res://Treasure.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SoundEffect/chests/decidemp3-14575.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/SoundEffect/WeaponSoundEffect/bonk-By-Tuna.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.5, 11 )

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 1.3 ),
"transitions": PoolRealArray( 1, 1.56917, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Treasure" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14, -11 )
scale = Vector2( 1.5625, 1.5625 )
texture = ExtResource( 1 )
hframes = 5
vframes = 8

[node name="Area2D" type="Area2D" parent="Sprite"]
position = Vector2( -9, 7 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 0.5, -2 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
